client/src/pages/home/styles.module.css
/* Messages */
.messagesColumn {
  display: flex;
  margin: auto;
  width: 85%;
  height: 85vh;
  overflow: auto;
  padding: 10px 0;
  flex-direction: column;
  justify-content: end;
}

.message {
  overflow-wrap: break-word;
  background: rgb(138, 128, 229);
  border-radius: 6px;
  margin-bottom: 15px;
  max-width: 400px;
  padding: 0px 12px;
}

.messageReceived {
  margin: 0px 0px 15px auto;
  background: rgb(151, 109, 201);
}

.msgMeta {
  color: #fff;
  font-size: 0.75rem;
}
.msgText {
  text-align: left;
  line-height: 1.2;
  color: #fff;
}

/* Message input and button */
.sendMessageContainer {
  display: flex;
  justify-content: center;
  text-align: center;
  margin: auto;
  width: 85%;
  padding-top: 20px;
}

.sendMessageContainer button {
  width: 5%;
}

.messageInput {
  padding: 14px;
  width: 95%;
  margin-right: 10px;
  border-radius: 6px;
  border: 1px solid rgb(153, 217, 234);
  font-size: 0.9rem;
}

